namespace java com.sogou.bizwork.task.api.tag.to

struct TagTo{
    1:i64 id;
	2:i64 taskId;
	3:i64 userId;
	4:string name;
	5:string color
	6:i32 status;
	7:string createTime;
	8:string changeTime;
}